Version: 1.2.0
Date: ????
  Changes:
    - Improved runtime script event registration to only activate when a modded beacon is involved
    - Improved area marked deconstruction searching to be faster when applied
    - Expanded possible status messages to be more complete, covering most possible operational descriptions
  Bugfixes:
    - Fixed a crash when marking entities for deconstruction
    - Fixed an issue where the beacon could not be selected in a deconstruction planner
    - Fixed shenanegins when marking beacons for deconstruction
    - Fixed beacons having the wrong status in certain cases
    - Fixed the UndoRedoQueue not working properly with modded beacons
    - Fixed potential crashes when migrating from older saves
---------------------------------------------------------------------------------------------------
Version: 1.1.3
Date: 2025-06-22
  Changes:
    - Added missing 1.1.0 migrations, lol
    - Cleaned up 1.1.2 migrations
    - Removed stray on_cancelled_deconstruction event registration that was overridden
---------------------------------------------------------------------------------------------------
Version: 1.1.2
Date: 2025-06-20
  Changes:
    - Removed the redundant hidden surface because it's... well... redundant
---------------------------------------------------------------------------------------------------
Version: 1.1.1
Date: 2025-06-18
  Changes:
    - Ignore the internal recipe in statistics
---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 2025-06-18
  Features:
    - Using quezler certified jankery, you will now have zero script overhead when idle/full power. There will only be overhead when the state changes to/from active.
---------------------------------------------------------------------------------------------------
Version: 1.0.2
Date: 2025-04-22
  Changes: